# prime-switch-indicator

./: CMakeLists.txt  LEGAL  README.md  prime_switch_indicator.cpp  prime_switch_indicator_select.cpp
services/: prime-switch-indicator.service
